# Spec-Coding

./: .gitignore  README.en.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/agents/: base_agent.py  coder_agent.py  critic_agent.py  planner_agent.py  router_agent.py  verifier_agent.py
app/core/: context_manager.py  event_bus.py  memory_store.py  models.py  schema_validator.py  spec_loader.py  task_templates.py
app/evals/: evaluator.py  replay.py
app/graph/: executor.py  graph_builder.py
app/runtime/: adapter_factory.py  base_adapter.py  cli_adapter.py  command_executor.py  ecc_adapter.py  patch_applier.py  workspace_manager.py
app/superpowers/: retry_policy.py  self_repair.py
app/tools/: base_tool.py  file_tool.py  test_tool.py
examples/: run_feature_task.py  run_fix_bug.py  run_investigate_issue.py
specs/agents/: coder.yaml  critic.yaml  planner.yaml  router.yaml  verifier.yaml
specs/tasks/: fix_bug.yaml  implement_feature.yaml  investigate_issue.yaml  write_tests.yaml
tests/: test_adapter_factory.py  test_evaluator.py  test_graph_execution.py  test_retry_policy.py  test_spec_loader.py  test_tool_router.py
